2007-08-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-file-remote-p): Handle optional parameter
	IDENTIFICATION.
	(tramp-file-name-handler): No special handling for
	`expand-file-name'.  But for `file-name-as-directory'.

2007-07-28  Eli Zaretskii  <eliz@gnu.org>

	* trampver.el.in: Fix the `coding' cookie.

2007-07-25  Glenn Morris  <rgm@gnu.org>

	* Relicense all FSF files to GPLv3 or later.

2007-07-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-file-remote-p): Handle optional parameter
	CONNECTED.

2007-07-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-find-shell, tramp-open-connection-telnet)
	(tramp-open-connection-rsh, tramp-open-connection-su)
	(tramp-open-connection-multi)
	(tramp-open-connection-setup-interactive-shell): Guard against
	$PROMPT_COMMAND shell var.  Reported by Steve Youngs
	<steve@sxemacs.org>.

2007-06-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-append-tramp-buffers): Replace "sensible" by
	"sensitive" in the hint.

2007-06-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-insert-file-contents): VISIT must be
	handled after insertion of the local copy.  Reported by Peter
	Gordon <peter@pg-consultants.com>.

2007-05-28  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.0.56 released.

2007-05-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el:
	* tramp-ftp.el:
	* tramp-smb.el:
	* tramp-util.el:
	* tramp-vc.el:
	Don't load cl.el, because that pollutes the namespace.  Replace cl
	macros by their implementations where necessary.  Requested by
	Richard Stallman <rms@gnu.org>.

	* tramp.el (tramp-file-name-p, tramp-file-name-multi-method)
	(tramp-file-name-method, tramp-file-name-user)
	(tramp-file-name-host, tramp-file-name-localname): New defuns,
	replacing defstruct `tramp-file-name'.
	(tramp-handle-file-remote-p, tramp-completion-dissect-file-name1)
	(tramp-dissect-file-name, tramp-dissect-multi-file-name): Apply